# slotty

./: .clang-format  .gitignore  AUTHORS  CMakeLists.txt  Doxyfile  README.md  slotty.h
cmake/: clang-format.cmake
include/slotty/: slotty.h
samples/: lambda_func.cpp  member_func.cpp  simple_test.cpp
tests/: CMakeLists.txt  Simple.cc
